# events-face

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
app/application/: main.py  schemas.py
app/application/registration/: filters.py  handlers.py  schemas.py  sorters.py
app/domain/dtos/: events.py
app/domain/exceptions/: base.py  events.py
app/exceptions/: events.py
app/infra/caches/events/: base.py  redis.py
app/infra/providers/: events_provider.py  notifications_provider.py
app/infra/repositories/events/: base.py
app/logic/: converters.py  init.py  services.py
app/settings/: config.py
redisdata/: dump.rdb
src/core/: settings.py
