[project]
name = "events-face"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "email-validator>=2.2.0",
    "fastapi>=0.115.7",
    "httpx>=0.28.1",
    "punq>=0.7.0",
    "pydantic-settings>=2.7.1",
    "pytest>=8.3.4",
    "redis>=5.2.1",
    "ruff>=0.9.3",
    "sqlalchemy>=2.0.37",
    "uvicorn>=0.34.0",
]

[tool.ruff.lint]
extend-select = ["I"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
